<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_vault_mgmt_title">

        <Preference
            app:iconSpaceReserved="false"
            app:key="storage_info"
            app:summary="@string/pref_storage_info_summary"
            app:title="@string/pref_storage_info_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="export_data"
            app:summary="@string/pref_export_data_summary"
            app:title="@string/pref_export_data_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="import_data"
            app:summary="@string/pref_import_data_summary"
            app:title="@string/pref_import_data_title" />

        <ListPreference
            app:defaultValue="json"
            app:entries="@array/export_format_entries"
            app:entryValues="@array/export_format_values"
            app:iconSpaceReserved="false"
            app:key="export_format"
            app:title="@string/pref_export_format_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="clear_data"
            app:summary="@string/pref_clear_data_summary"
            app:title="@string/pref_clear_data_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_backup_restore_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="auto_backups"
            app:summary="@string/pref_auto_backups_summary"
            app:title="@string/pref_auto_backups_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="backup_location"
            app:summary="@string/pref_backup_location_summary"
            app:title="@string/pref_backup_location_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="backup_filename_config"
            app:summary="@string/pref_backup_filename_summary"
            app:title="@string/pref_backup_filename_title" />

        <EditTextPreference
            app:defaultValue="10"
            app:iconSpaceReserved="false"
            app:key="backup_retention"
            app:summary="%s"
            app:title="@string/pref_max_backups_title" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/backup_copies_entries"
            app:entryValues="@array/backup_copies_values"
            app:iconSpaceReserved="false"
            app:key="backup_copies"
            app:summary="%s"
            app:title="@string/pref_copies_per_backup_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="manage_backups"
            app:summary="@string/pref_manage_backups_summary"
            app:title="@string/manage_backups" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="last_backup"
            app:selectable="false"
            app:summary="@string/pref_never"
            app:title="@string/pref_last_backup_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_troubleshooting_title">

        <Preference
            app:iconSpaceReserved="false"
            app:key="crash_logs_location"
            app:summary="@string/pref_crash_logs_location_summary"
            app:title="@string/pref_crash_logs_location_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="share_crash_logs"
            app:summary="@string/pref_share_crash_logs_summary"
            app:title="@string/pref_share_crash_logs_title" />

    </PreferenceCategory>

</PreferenceScreen>
