<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_security_title">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="require_auth_export"
            app:summary="@string/pref_require_auth_export_summary"
            app:title="@string/pref_require_auth_export_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="encrypt_backups"
            app:summary="@string/pref_encrypt_backups_summary"
            app:title="@string/pref_encrypt_backups_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="block_screenshots"
            app:summary="@string/pref_block_screenshots_summary"
            app:title="@string/pref_block_screenshots_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="biometric_login_enabled"
            app:summary="@string/pref_biometric_login_summary"
            app:title="@string/pref_biometric_login_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="change_master_password"
            app:summary="@string/pref_change_master_password_summary"
            app:title="@string/pref_change_master_password_title" />

        <ListPreference
            app:defaultValue="60000"
            app:entries="@array/auto_lock_timeout_entries"
            app:entryValues="@array/auto_lock_timeout_values"
            app:iconSpaceReserved="false"
            app:key="auto_lock_timeout"
            app:title="@string/pref_auto_lock_timeout_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_lockout_settings_title">

        <ListPreference
            app:defaultValue="5"
            app:entries="@array/max_failed_attempts_entries"
            app:entryValues="@array/max_failed_attempts_values"
            app:iconSpaceReserved="false"
            app:key="max_failed_attempts"
            app:title="@string/pref_max_failed_attempts_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="30000"
            app:entries="@array/lockout_duration_entries"
            app:entryValues="@array/lockout_duration_values"
            app:iconSpaceReserved="false"
            app:key="lockout_duration"
            app:title="@string/pref_lockout_duration_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_autofill_title">

        <Preference
            app:iconSpaceReserved="false"
            app:key="autofill_service"
            app:title="@string/autofill_pref_title" />

    </PreferenceCategory>

</PreferenceScreen>
