<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_about_title">

        <Preference
            app:iconSpaceReserved="false"
            app:key="about_app"
            app:summary="@string/pref_about_app_summary"
            app:title="@string/about" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="github_link"
            app:summary="@string/pref_github_summary"
            app:title="GitHub" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="telegram_link"
            app:summary="@string/pref_telegram_summary"
            app:title="@string/pref_telegram_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="licenses"
            app:summary="@string/pref_licenses_summary"
            app:title="@string/pref_licenses_title" />

    </PreferenceCategory>

</PreferenceScreen>
