<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_display_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="use_bottom_app_bar"
            app:summary="@string/pref_bottom_app_bar_summary"
            app:title="@string/pref_bottom_app_bar_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="use_dynamic_colors"
            app:summary="@string/pref_dynamic_colors_summary"
            app:title="@string/pref_dynamic_colors_title" />

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:iconSpaceReserved="false"
            app:key="app_theme"
            app:summary="%s"
            app:title="@string/pref_theme_title" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:iconSpaceReserved="false"
            app:key="app_language"
            app:summary="%s"
            app:title="@string/pref_language_title" />

    </PreferenceCategory>

</PreferenceScreen>
